--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   app:
     build: .
-    image: ravidoc/flask-task-app:latest
+    image: flask-task-app:latest
     ports:
       - "5000:5000"
     environment:
@@ -23,7 +23,7 @@ services:
       - MYSQL_USER=admin
       - MYSQL_PASSWORD=1234
     ports:
-      - "3306:3306"
+      - "3307:3307"
     volumes:
       - mysql-data:/var/lib/mysql
 
