--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,13 @@ services:
     environment:
       - FLASK_APP=run.py
       - FLASK_ENV=development
-      - SQLALCHEMY_DATABASE_URI=mysql://admin:1234@mysql/flask_task_db
+      - SQLALCHEMY_DATABASE_URI=mysql+pymysql://admin:1234@mysql:3306/flask_task_db
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     volumes:
       - .:/app
+    restart: unless-stopped
 
   mysql:
     image: mysql:8.0
@@ -23,9 +25,13 @@ services:
       - MYSQL_USER=admin
       - MYSQL_PASSWORD=1234
     ports:
-      - "3307:3307"
+      - "3307:3306"  # Host port 3307 maps to container port 3306
     volumes:
       - mysql-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
 volumes:
   mysql-data:
