--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,6 +7,29 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: rootpassword
+          MYSQL_DATABASE: flask_task_db
+          MYSQL_USER: admin
+          MYSQL_PASSWORD: 1234
+          MYSQL_DEFAULT_AUTHENTICATION_PLUGIN: mysql_native_password
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+        volumes:
+          - mysql-data:/var/lib/mysql
+
+    env:
+      FLASK_APP: run.py
+      FLASK_ENV: testing
+      SQLALCHEMY_DATABASE_URI: mysql+pymysql://admin:1234@localhost:3306/flask_task_db
 
     steps:
     - uses: actions/checkout@v4
@@ -20,10 +43,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest  # Install pytest if not in requirements.txt
+        pip install pytest
 
     - name: Run tests
       run: |
-        python -m pytest tests/ -v  # Assuming you have a tests/ directory
-        # Or if you have a specific test script:
-        # python test_script.py
+        python -m pytest tests/ -v
